Fix flicker on hover issue; Combine strings into one object

--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -64,6 +64,10 @@ h3,
             margin-left: 0;
         }
 
+        &:focus {
+            outline: none;
+        }
+
         &.is-Active {
             background-image: url(../img/star-filled.svg);
         }
